opam-version: "1.2"
maintainer: "Markus Mottl <markus.mottl@gmail.com>"
authors: [
  "Olivier Andrieu <oandrieu@gmail.com>"
  "Markus Mottl <markus.mottl@gmail.com>"
]
license: "GPL-3+"
homepage: "https://mmottl.github.io/gsl-ocaml"
doc: "https://mmottl.github.io/gsl-ocaml/api"
dev-repo: "https://github.com/mmottl/gsl-ocaml.git"
bug-reports: "https://github.com/mmottl/gsl-ocaml/issues"

build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]

depends: [
  "conf-gsl" {build}
  "conf-pkg-config" {build}
  "base" {build}
  "stdio" {build}
  "dune" {build & >= "1.3.0"}
]

available: [ ocaml-version >= "4.05" ]
