opam-version: "2.0"
maintainer: "Markus Mottl <markus.mottl@gmail.com>"
authors: [
  "Olivier Andrieu <oandrieu@gmail.com>"
  "Markus Mottl <markus.mottl@gmail.com>"
]
license: "GPL-3+"
homepage: "https://mmottl.github.io/gsl-ocaml"
doc: "https://mmottl.github.io/gsl-ocaml/api"
dev-repo: "git+https://github.com/mmottl/gsl-ocaml.git"
bug-reports: "https://github.com/mmottl/gsl-ocaml/issues"

build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]

depends: [
  "ocaml" {>= "4.05"}
  "dune" {build & >= "1.7.0"}
  "conf-gsl" {build}
  "conf-pkg-config" {build}
  "base" {build}
  "stdio" {build}
]

synopsis: "GSL - Bindings to the GNU Scientific Library"

description: """
gsl-ocaml interfaces the GSL (GNU Scientific Library), providing many of the
most frequently used functions for scientific computation including algorithms
for optimization, differential equations, statistics, random number generation,
linear algebra, etc."""
